# Back-End

fastapi-docker-project/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
fastapi-docker-project/app/: main.py
