[project]
name = "fastapi-docker-project"
version = "0.1.0"
description = ""
authors = [
    {name = "BrunoBigelli",email = "bbigelli@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
# ... existing config ...
package-mode = false  # Disables packaging features
